Add scalable sliding-window set tests